--- a/SITE PIZZARIA/css/styles.css
+++ b/SITE PIZZARIA/css/styles.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: rgb(255, 255, 255);;
     color: #333;
     margin: 0;
     padding: 0;
@@ -75,7 +75,7 @@ input[type="radio"] {
 }
 
 button {
-    background-color: rgb(115, 77, 176);
+    background-color: rgb(110, 20, 169);;
     color: white;
     border: none;
     cursor: pointer;
@@ -83,7 +83,7 @@ button {
 }
 
 button:hover {
-    background-color: rgb(115, 77, 176);
+    background-color: rgb(110, 20, 169);;
 }
 
 .error-message {
@@ -113,7 +113,7 @@ button:hover {
 
 .menu-container .pizza button {
     width: auto;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(110, 20, 169);;
     margin-top: 5px;
     transition: background-color 0.3s ease;
 }
@@ -194,3 +194,19 @@ footer {
     bottom: 0;
     width: 100%;
 } 
+.pix-container {
+    width: 80%;
+    max-width: 700px;
+    margin: 60px auto;
+    padding: 20px;
+    background-color: rgb(110, 20, 169);
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+    
+
+        
+
+
